--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "build": "babel src -d dist",
-    "download": "node ./dist/test.js"
+    "prettier": "prettier --write ./src/**/**/**/*"
   },
   "keywords": [
     "react",
@@ -30,7 +30,6 @@
     "chalk": "^2.4.2",
     "commander": "^3.0.2",
     "download-git-repo": "^3.0.2",
-    "ini": "^1.3.5",
     "inquirer": "^7.0.0",
     "log-symbols": "^3.0.0",
     "ora": "^3.4.0"
